--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -242,6 +242,7 @@
     </div>
 
     <!-- ORDER BUMPS -->
+    <!-- ORDER BUMPS -->
     <div class="checkout-card bumps-section">
         <!-- Bump 1: Recuperação -->
         <label class="bump-item" for="bump-recovery">
@@ -253,17 +254,59 @@
                     </svg>
                 </div>
             </div>
+            <img src="../assets/images/bumps/recovery.png" alt="Recuperação" class="bump-icon">
             <div class="bump-content">
                 <div class="bump-header">
                     <span class="bump-title">Pack Recuperação Total</span>
                     <span class="bump-price">+4,90€</span>
                 </div>
-                <p class="bump-description">Revela mensagens e fotos que foram <strong>apagadas</strong> nos últimos 12
-                    meses. Veja o que estão escondendo de ti.</p>
+                <p class="bump-description">Acessar mensagens e fotos que foram <strong>apagadas</strong> nos últimos 12
+                    meses.</p>
             </div>
         </label>
 
-        <!-- Bump 2: Fura-Fila -->
+        <!-- Bump 2: Áudios -->
+        <label class="bump-item" for="bump-audio">
+            <div class="bump-checkbox-wrapper">
+                <input type="checkbox" id="bump-audio" class="bump-checkbox" data-price="3.90">
+                <div class="bump-check-visual">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                        <polyline points="20 6 9 17 4 12"></polyline>
+                    </svg>
+                </div>
+            </div>
+            <img src="../assets/images/bumps/audio.png" alt="Áudios" class="bump-icon">
+            <div class="bump-content">
+                <div class="bump-header">
+                    <span class="bump-title">Pack Áudios Secretos</span>
+                    <span class="bump-price">+3,90€</span>
+                </div>
+                <p class="bump-description">Ouça todos os <strong>áudios</strong> enviados e recebidos no direct.</p>
+            </div>
+        </label>
+
+        <!-- Bump 3: Localização -->
+        <label class="bump-item" for="bump-location">
+            <div class="bump-checkbox-wrapper">
+                <input type="checkbox" id="bump-location" class="bump-checkbox" data-price="2.90">
+                <div class="bump-check-visual">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                        <polyline points="20 6 9 17 4 12"></polyline>
+                    </svg>
+                </div>
+            </div>
+            <img src="../assets/images/bumps/location.png" alt="Localização" class="bump-icon">
+            <div class="bump-content">
+                <div class="bump-header">
+                    <span class="bump-title">Histórico de Localização</span>
+                    <span class="bump-price">+2,90€</span>
+                </div>
+                <p class="bump-description">Veja por onde a pessoa andou nos últimos 30 dias com <strong>mapa
+                        detalhado</strong>.</p>
+            </div>
+        </label>
+
+        <!-- Bump 4: Fura-Fila -->
         <label class="bump-item" for="bump-priority">
             <div class="bump-checkbox-wrapper">
                 <input type="checkbox" id="bump-priority" class="bump-checkbox" data-price="2.90">
@@ -273,13 +316,14 @@
                     </svg>
                 </div>
             </div>
+            <img src="../assets/images/bumps/priority.png" alt="Prioridade" class="bump-icon">
             <div class="bump-content">
                 <div class="bump-header">
                     <span class="bump-title">Fura-Fila Prioritário</span>
                     <span class="bump-price">+2,90€</span>
                 </div>
-                <p class="bump-description">Sua espionagem processada em <strong>menos de 1 minuto</strong>. Salte na
-                    frente de 84 pessoas na fila de espera.</p>
+                <p class="bump-description">Sua espionagem processada em <strong>menos de 1 minuto</strong>. Salte a
+                    fila.</p>
             </div>
         </label>
     </div>
@@ -288,43 +332,47 @@
         .bump-item {
             display: flex;
             gap: 12px;
-            padding: 16px;
-            border: 2px dashed #e2e8f0;
+            padding: 12px;
+            border: 1px solid #e2e8f0;
             border-radius: 12px;
-            margin-bottom: 12px;
+            margin-bottom: 10px;
             cursor: pointer;
             transition: all 0.2s ease;
-            background: #f8fafc;
-            align-items: flex-start;
+            background: #fff;
+            align-items: center;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
         }
 
         .bump-item:hover {
-            background: #f1f5f9;
+            background: #f8fafc;
             border-color: #cbd5e1;
         }
 
         .bump-item.active {
             background: rgba(16, 185, 129, 0.05);
-            border: 2px solid #10B981;
+            border: 1px solid #10B981;
+            box-shadow: 0 0 0 1px #10B981;
         }
 
         .bump-checkbox-wrapper {
             position: relative;
-            width: 24px;
-            height: 24px;
+            width: 20px;
+            height: 20px;
             flex-shrink: 0;
-            margin-top: 2px;
         }
 
         .bump-checkbox {
             position: absolute;
             opacity: 0;
             cursor: pointer;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
         }
 
         .bump-check-visual {
-            width: 24px;
-            height: 24px;
+            width: 20px;
+            height: 20px;
             border: 2px solid #cbd5e1;
             border-radius: 6px;
             display: flex;
@@ -341,8 +389,8 @@
         }
 
         .bump-check-visual svg {
-            width: 14px;
-            height: 14px;
+            width: 12px;
+            height: 12px;
             opacity: 0;
             transform: scale(0.5);
             transition: all 0.2s;
@@ -353,6 +401,14 @@
             transform: scale(1);
         }
 
+        .bump-icon {
+            width: 48px;
+            height: 48px;
+            object-fit: contain;
+            border-radius: 8px;
+            flex-shrink: 0;
+        }
+
         .bump-content {
             flex: 1;
         }
@@ -361,27 +417,26 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 4px;
+            margin-bottom: 2px;
         }
 
         .bump-title {
             font-weight: 700;
             color: #1e293b;
-            font-size: 15px;
+            font-size: 14px;
         }
 
         .bump-price {
             font-weight: 800;
             color: #EF4444;
-            /* Vermelho para destaque */
-            font-size: 14px;
+            font-size: 13px;
         }
 
         .bump-description {
             margin: 0;
-            font-size: 13px;
+            font-size: 12px;
             color: #64748b;
-            line-height: 1.4;
+            line-height: 1.3;
         }
 
         .bump-description strong {
