refactor: replace all emojis with SVGs and text tags

--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -79,7 +79,19 @@
             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
             </svg>
-            <span class="announcement-text">🎉 Promoção exclusiva: <strong>90% OFF</strong> apenas hoje!</span>
+            <span class="announcement-text"><svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" style="margin-right: 4px; vertical-align: middle;">
+                    <path d="M5.8 11.3 2 22l10.7-3.79" />
+                    <path d="M4 3h.01" />
+                    <path d="M22 8h.01" />
+                    <path d="M15 2h.01" />
+                    <path d="M22 20h.01" />
+                    <path
+                        d="m22 2-2.24.75a2.9 2.9 0 0 0-1.96 3.12v0c.1.86-.57 1.63-1.45 1.63h-.38c-.86 0-1.6.6-1.76 1.44L14 10" />
+                    <path d="m22 13-.82-.33c-.86-.34-1.82.2-2.08 1.15v0c-.27.98-.15 1.96.27 2.96l.66 1.6" />
+                    <path d="m7 15 .72-.09c.87-.1 1.7.58 1.81 1.45v0c.12.96.69 1.87 1.57 2.1l1.63.4" />
+                    <path d="M6.5 13.5 9 16m2.5-3 1.5-1.5" />
+                </svg> Promoção exclusiva: <strong>90% OFF</strong> apenas hoje!</span>
             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <circle cx="12" cy="12" r="10"></circle>
                 <polyline points="12 6 12 12 16 14"></polyline>
