--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -255,6 +255,21 @@
 
     <!-- ORDER BUMPS -->
     <!-- ORDER BUMPS -->
+    <div style="margin: 24px 0 12px 0;">
+        <h3
+            style="color: #ef4444; font-size: 15px; font-weight: 800; display: flex; align-items: center; gap: 6px; text-transform: uppercase; margin-bottom: 8px;">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z">
+                </path>
+                <line x1="12" y1="9" x2="12" y2="13"></line>
+                <line x1="12" y1="17" x2="12.01" y2="17"></line>
+            </svg>
+            OPORTUNIDADE ÚNICA:
+        </h3>
+        <p style="font-size: 13px; color: #4B5563; margin: 0; line-height: 1.4;">Não feche o pedido sem adicionar estes
+            bônus exclusivos. <strong>Você não verá esta oferta novamente.</strong></p>
+    </div>
+
     <div class="checkout-card bumps-section">
         <!-- Bump 1: Recuperação -->
         <label class="bump-item" for="bump-recovery">
@@ -341,28 +356,34 @@
     </div>
 
     <style>
+        .top-announcement {
+            background-color: #10B981 !important;
+            /* Green */
+        }
+
         .bump-item {
             display: flex;
             gap: 12px;
             padding: 12px;
-            border: 1px solid #e2e8f0;
+            border: 1px solid #4338ca;
             border-radius: 12px;
             margin-bottom: 10px;
             cursor: pointer;
             transition: all 0.2s ease;
-            background: #fff;
+            background: #3730A3;
+            /* Roxinho do sistema (Indigo-800) */
             align-items: center;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
         }
 
         .bump-item:hover {
-            background: #f8fafc;
-            border-color: #cbd5e1;
+            background: #312E81;
+            border-color: #4F46E5;
         }
 
         .bump-item.active {
-            background: rgba(16, 185, 129, 0.05);
-            border: 1px solid #10B981;
+            background: #312E81;
+            border: 2px solid #10B981;
             box-shadow: 0 0 0 1px #10B981;
         }
 
@@ -385,12 +406,13 @@
         .bump-check-visual {
             width: 20px;
             height: 20px;
-            border: 2px solid #cbd5e1;
+            border: 2px solid #6366f1;
+            /* Lighter purple border */
             border-radius: 6px;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: white;
+            background: rgba(255, 255, 255, 0.1);
             color: white;
             transition: all 0.2s;
         }
@@ -419,6 +441,8 @@
             object-fit: contain;
             border-radius: 8px;
             flex-shrink: 0;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 2px;
         }
 
         .bump-content {
@@ -434,25 +458,28 @@
 
         .bump-title {
             font-weight: 700;
-            color: #1e293b;
+            color: #fff;
+            /* White title */
             font-size: 14px;
         }
 
         .bump-price {
             font-weight: 800;
-            color: #EF4444;
+            color: #4ade80;
+            /* Green price */
             font-size: 13px;
         }
 
         .bump-description {
             margin: 0;
             font-size: 12px;
-            color: #64748b;
+            color: #e0e7ff;
+            /* Light purple-gray text */
             line-height: 1.3;
         }
 
         .bump-description strong {
-            color: #0f172a;
+            color: #fff;
             font-weight: 600;
         }
     </style>
