--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -257,14 +257,15 @@
     <!-- ORDER BUMPS -->
     <div style="margin: 24px 0 16px 0; padding: 0 16px; text-align: left;">
         <h3
-            style="color: #4B5563; font-size: 15px; font-weight: 700; display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            style="color: #d97706; font-size: 15px; font-weight: 700; display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
+            <svg class="pulsing-star" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#f59e0b"
+                stroke-width="2">
                 <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z">
                 </path>
             </svg>
             Recomendado para você
         </h3>
-        <p style="font-size: 13px; color: #6B7280; margin: 0; line-height: 1.4;">Adicione estes extras para ter uma
+        <p style="font-size: 13px; color: #9ca3af; margin: 0; line-height: 1.4;">Adicione estes extras para ter uma
             espionagem completa.</p>
     </div>
 
@@ -283,7 +284,10 @@
             <div class="bump-content">
                 <div class="bump-header">
                     <span class="bump-title">Pack Recuperação Total</span>
-                    <span class="bump-price">+4,90€</span>
+                    <div class="bump-prices">
+                        <span class="bump-old-price">8,90€</span>
+                        <span class="bump-price">+4,90€</span>
+                    </div>
                 </div>
                 <p class="bump-description">Acessar mensagens e fotos que foram <strong>apagadas</strong> nos últimos 12
                     meses.</p>
@@ -304,7 +308,10 @@
             <div class="bump-content">
                 <div class="bump-header">
                     <span class="bump-title">Pack Áudios Secretos</span>
-                    <span class="bump-price">+3,90€</span>
+                    <div class="bump-prices">
+                        <span class="bump-old-price">7,90€</span>
+                        <span class="bump-price">+3,90€</span>
+                    </div>
                 </div>
                 <p class="bump-description">Ouça todos os <strong>áudios</strong> enviados e recebidos no direct.</p>
             </div>
@@ -324,7 +331,10 @@
             <div class="bump-content">
                 <div class="bump-header">
                     <span class="bump-title">Histórico de Localização</span>
-                    <span class="bump-price">+2,90€</span>
+                    <div class="bump-prices">
+                        <span class="bump-old-price">5,90€</span>
+                        <span class="bump-price">+2,90€</span>
+                    </div>
                 </div>
                 <p class="bump-description">Veja por onde a pessoa andou nos últimos 30 dias com <strong>mapa
                         detalhado</strong>.</p>
@@ -345,7 +355,10 @@
             <div class="bump-content">
                 <div class="bump-header">
                     <span class="bump-title">Fura-Fila Prioritário</span>
-                    <span class="bump-price">+2,90€</span>
+                    <div class="bump-prices">
+                        <span class="bump-old-price">5,90€</span>
+                        <span class="bump-price">+2,90€</span>
+                    </div>
                 </div>
                 <p class="bump-description">Sua espionagem processada em <strong>menos de 1 minuto</strong>. Salte a
                     fila.</p>
@@ -355,8 +368,15 @@
 
     <style>
         .top-announcement {
-            background-color: #AB58F4 !important;
-            /* Purple */
+            background-color: #8B5CF6 !important;
+            /* Harmonized Purple (Violet-500) */
+            color: #ffffff !important;
+        }
+
+        /* Ensure SVGs in top bar are white */
+        .top-announcement svg {
+            color: #ffffff;
+            stroke: #ffffff;
         }
 
         .bump-item {
@@ -368,8 +388,8 @@
             cursor: pointer;
             transition: all 0.2s ease;
 
-            /* Gradient requested by user (matches profile-card-badge but with solid base for visibility) */
-            background: linear-gradient(135deg, #4c1d95 0%, #5b21b6 100%);
+            /* Reduced opacity considerably (0.85) */
+            background: linear-gradient(135deg, rgba(76, 29, 149, 0.9) 0%, rgba(91, 33, 182, 0.85) 100%);
             border: 1px solid rgba(139, 92, 246, 0.4);
 
             align-items: center;
@@ -383,7 +403,7 @@
         }
 
         .bump-item.active {
-            background: linear-gradient(135deg, #4c1d95 0%, #312e81 100%);
+            background: linear-gradient(135deg, rgba(76, 29, 149, 0.95) 0%, rgba(49, 46, 129, 0.95) 100%);
             border: 2px solid #10B981;
             box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.2);
         }
@@ -463,6 +483,19 @@
             font-size: 14px;
         }
 
+        .bump-prices {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .bump-old-price {
+            font-size: 11px;
+            color: rgba(255, 255, 255, 0.5);
+            text-decoration: line-through;
+            font-weight: 500;
+        }
+
         .bump-price {
             font-weight: 800;
             color: #4ade80;
@@ -481,6 +514,27 @@
         .bump-description strong {
             color: #fff;
             font-weight: 600;
+        }
+
+        .pulsing-star {
+            animation: pulse-star 2s infinite;
+        }
+
+        @keyframes pulse-star {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            50% {
+                transform: scale(1.2);
+                opacity: 0.8;
+            }
+
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
         }
     </style>
 
