--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -69,14 +69,7 @@
 </head>
 
 <body>
-    <!-- Full Width Banner -->
-    <div style="width: 100%; max-width: 100vw; overflow: hidden; line-height: 0;">
-        <img src="../assets/images/bannercheckout.png" alt="Checkout Banner"
-            style="width: 100%; height: auto; display: block; object-fit: cover;">
-    </div>
-
-    <!-- Top Bar Announcement -->
-    <!-- Top Bar Announcement (Marquee) -->
+    <!-- Top Bar Announcement (Marquee) - MOVED TO TOP -->
     <div class="top-announcement">
         <div class="marquee-wrapper">
             <div class="marquee-content">
@@ -109,6 +102,11 @@
             </svg>
         </div>
     </div>
+    <!-- Full Width Banner -->
+    <div style="width: 100%; max-width: 100vw; overflow: hidden; line-height: 0;">
+        <img src="../assets/images/bannercheckout.png" alt="Checkout Banner"
+            style="width: 100%; height: auto; display: block; object-fit: cover;">
+    </div>
 
     <div class="checkout-container">
         <!-- Header Profissional -->
@@ -125,7 +123,7 @@
         </div>
 
         <!-- Ordenar Badge de Escassez -->
-        <div class="scarcity-badge" style="margin-top: 8px; margin-bottom: 8px;">
+        <div class="scarcity-badge" style="margin: 12px 0;">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <circle cx="12" cy="12" r="10"></circle>
                 <polyline points="12 6 12 12 16 14"></polyline>
@@ -347,7 +345,7 @@
                         <span class="bump-price">+2,90€</span>
                     </div>
                 </div>
-                <p class="bump-description">Veja por onde a pessoa andou nos últimos 30 dias com <strong>mapa
+                <p class="bump-description">Veja por onde a pessoa onde nos últimos 30 dias com <strong>mapa
                         detalhado</strong>.</p>
             </div>
         </label>
@@ -378,6 +376,12 @@
     </div>
 
     <style>
+        body {
+            background: #000;
+            margin: 0;
+            padding: 0;
+        }
+
         .top-announcement {
             background: linear-gradient(135deg, #4c1d95 0%, #5b21b6 100%) !important;
             color: #ffffff !important;
@@ -639,10 +643,28 @@
                 background-position: 200% center;
             }
         }
+
+        @keyframes pulse-force-green {
+            0% {
+                transform: scale(1);
+                box-shadow: 0 0 0 0 rgba(16, 185, 129, 0.7);
+            }
+
+            50% {
+                transform: scale(1.03);
+                box-shadow: 0 0 20px 0 rgba(16, 185, 129, 0.4);
+            }
+
+            100% {
+                transform: scale(1);
+                box-shadow: 0 0 0 0 rgba(16, 185, 129, 0);
+            }
+        }
     </style>
 
     <!-- Botão de Finalizar -->
-    <button type="submit" class="btn-primary btn-futuristic" id="submitBtn">
+    <button type="submit" class="btn-primary btn-futuristic" id="submitBtn"
+        style="animation: pulse-force-green 1.5s infinite !important; overflow: visible !important;">
         <span>Finalizar Compra</span>
         <span class="btn-amount">12,90€</span>
     </button>
