fix(assets): rename svg with spaces to hyphenated filename to fix 404

--- a/stalkea_clone/pages/feed.html
+++ b/stalkea_clone/pages/feed.html
@@ -885,7 +885,7 @@
                 style="width: 24px; height: 24px; opacity: 1;"></button>
         <button type="button" class="blocked-action"><img alt="Buscar" src="../assets/svg/lupa.svg"
                 style="width: 24px; height: 24px;"></button>
-        <button type="button" class="blocked-action"><img alt="Adicionar" src="../assets/svg/adicionar conteudo.svg"
+        <button type="button" class="blocked-action"><img alt="Adicionar" src="../assets/svg/adicionar-conteudo.svg"
                 style="width: 24px; height: 24px;"></button>
         <button type="button" class="blocked-action"><img alt="Reels" src="../assets/svg/reels.svg"
                 style="width: 24px; height: 24px;"></button>
