--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -178,9 +178,13 @@
                             </path>
                             <polyline points="22,6 12,13 2,6"></polyline>
                         </svg>
-                        Email
+                        Email <span
+                            style="font-size: 11px; color: #10B981; font-weight: 600; margin-left: 6px;">(Obrigatório
+                            para receber o acesso)</span>
                     </label>
                     <input type="email" id="email" class="form-input" placeholder="joao@exemplo.pt" required>
+                    <p style="font-size: 12px; color: #9ca3af; margin-top: 6px;">O acesso à ferramenta será enviado para
+                        este email.</p>
                 </div>
 
                 <div class="form-group">
