--- a/stalkea_clone/pages/feed.html
+++ b/stalkea_clone/pages/feed.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
 
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s); j.async = true; j.src = "https://gtm.instaspy.ai/5ctqlraxy.js?" + i; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'dlzt17c=EBxcNTg8WSgjKDY8VD0%2FRQ9FU1xdVxANRAsVEwAaEQJXGQg%3D');</script>
+    <!-- Google Tag Manager (DISABLED: Domain gtm.instaspy.ai is invalid/down) -->
+    <!-- <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s); j.async = true; j.src = "https://gtm.instaspy.ai/5ctqlraxy.js?" + i; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'dlzt17c=EBxcNTg8WSgjKDY8VD0%2FRQ9FU1xdVxANRAsVEwAaEQJXGQg%3D');</script> -->
     <!-- End Google Tag Manager -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
