--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -790,7 +790,67 @@
 
 <!-- Scripts -->
 <script src="../scripts/services/waymb-service.js"></script>
-<script src="../scripts/pages/checkout.min.js"></script>
+<!-- ERROR MODAL (Custom Alert) -->
+<div id="errorModal" class="modal-overlay" style="display: none;">
+    <div class="modal-content" style="max-width: 400px; text-align: center;">
+        <div class="modal-icon" style="margin-bottom: 16px;">
+            <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#E53E3E" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10"></circle>
+                <line x1="12" y1="8" x2="12" y2="12"></line>
+                <line x1="12" y1="16" x2="12.01" y2="16"></line>
+            </svg>
+        </div>
+        <h3 id="errorModalTitle" style="color: white; font-size: 20px; font-weight: 700; margin-bottom: 12px;">Erro</h3>
+        <p id="errorModalMessage" style="color: #9CA3AF; font-size: 15px; line-height: 1.6; margin-bottom: 24px;">
+            Ocorreu um erro inesperado.
+        </p>
+        <button onclick="closeErrorModal()" class="btn-futuristic"
+            style="background: #374151 !important; box-shadow: none !important; margin-top: 0 !important; justify-content: center !important;">
+            ENTENDIDO
+        </button>
+    </div>
+</div>
 
+<style>
+    .modal-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        backdrop-filter: blur(8px);
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.3s ease;
+    }
+
+    .modal-overlay.active {
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    .modal-content {
+        background: rgba(17, 24, 39, 0.95);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 24px;
+        padding: 32px;
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+        transform: translateY(20px);
+        transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    .modal-overlay.active .modal-content {
+        transform: translateY(0);
+    }
+</style>
+
+<script src="../scripts/pages/checkout.min.js?v=2.6"></script>
+</body>
 
 </html>
